--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ ipython==7.1.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.13.1
+Jinja2==2.10.1
 jupyter-client==5.2.3
 jupyter-core==4.4.0
 MarkupSafe==1.1.1
