--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,164 @@ virtualenvwrapper==4.8.2
 wcwidth==0.1.7
 Werkzeug==0.14.1
 WTForms==2.2.1
+appnope==0.1.0
+attrs==19.1.0
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+bleach==3.1.0
+configparser==3.7.4
+cycler==0.10.0
+decorator==4.4.0
+defusedxml==0.5.0
+entrypoints==0.3
+enum34==1.1.6
+functools32==3.2.3.post2
+futures==3.2.0
+ipaddress==1.0.22
+ipykernel==4.10.0
+ipython==5.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+Jinja2==2.10
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+MarkupSafe==1.1.1
+matplotlib==2.2.4
+mistune==0.8.4
+nbconvert==5.4.1
+nbformat==4.4.0
+notebook==5.7.8
+numpy==1.16.2
+pandas==0.24.2
+pandocfilters==1.4.2
+pathlib2==2.3.3
+pexpect==4.6.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
+Pygments==2.3.1
+pyparsing==2.3.1
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2018.9
+pyzmq==18.0.1
+qtconsole==4.4.3
+scandir==1.10.0
+scipy==1.2.1
+seaborn==0.9.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
+subprocess32==3.5.3
+terminado==0.8.2
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
+appnope==0.1.0
+asn1crypto==0.24.0
+attrs==19.1.0
+Babel==2.6.0
+backcall==0.1.0
+cachetools==2.1.0
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cryptography==2.3.1
+cycler==0.10.0
+Cython==0.29.1
+dash==0.39.0
+dash-core-components==0.44.0
+dash-daq==0.1.0
+dash-html-components==0.14.0
+dash-renderer==0.20.0
+dash-table==3.6.0
+decorator==4.3.0
+fbprophet==0.3.post2
+Flask==1.0.2
+Flask-Babel==0.12.2
+Flask-Compress==1.4.0
+Flask-SQLAlchemy==2.3.2
+Flask-Table==0.5.0
+Flask-WTF==0.14.2
+google-api-core==1.5.0
+google-auth==1.5.1
+google-cloud-bigquery==1.6.0
+google-cloud-core==0.28.1
+google-cloud-storage==1.13.0
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+idna==2.7
+ipdb==0.11
+ipykernel==5.1.0
+ipython==7.0.1
+ipython-genutils==0.2.0
+isodate==0.6.0
+itsdangerous==1.1.0
+jedi==0.13.1
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.3
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+MarkupSafe==1.1.1
+matplotlib==3.0.2
+mysql-connector==2.1.6
+mysql-connector-python==8.0.15
+nbformat==4.4.0
+numpy==1.15.4
+pandas==0.23.4
+parso==0.3.1
+pbr==5.1.0
+pexpect==4.6.0
+pickleshare==0.7.5
+plotly==3.7.1
+prompt-toolkit==2.0.6
+protobuf==3.6.1
+ptyprocess==0.6.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.19
+Pygments==2.2.0
+PyMySQL==0.9.3
+pyOpenSSL==18.0.0
+pyparsing==2.3.0
+pyrsistent==0.14.11
+pystan==2.18.0.0
+python-dateutil==2.7.3
+python-http-client==3.1.0
+pytz==2018.5
+PyYAML==3.13
+pyzmq==17.1.2
+requests==2.20.0
+retrying==1.3.3
+rsa==4.0
+scikit-learn==0.20.3
+scipy==1.2.1
+seaborn==0.9.0
+sendgrid==5.6.0
+simple-salesforce==0.74.2
+simplegeneric==0.8.1
+six==1.11.0
+sklearn==0.0
+SQLAlchemy==1.3.0
+stevedore==1.30.0
+tornado==5.1.1
+traitlets==4.3.2
+urllib3==1.24
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
+virtualenvwrapper==4.8.2
+wcwidth==0.1.7
+Werkzeug==0.14.1
+WTForms==2.2.1
