--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,5 @@
-dash==0.39.0
-dash-core-components==0.44.0
-Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-google-api-core==1.5.0
-google-auth==1.5.1
-google-cloud-bigquery==1.6.0
-jsonschema==3.0.1
-matplotlib==3.0.2
-mysql-connector==2.1.6
-mysql-connector-python==8.0.15
-nbformat==4.4.0
-numpy==1.15.4
-pandas==0.23.4
-plotly==3.7.1
-PyMySQL==0.9.3
-pyOpenSSL==18.0.0
-requests==2.20.0
-scikit-learn==0.20.3
-scipy==1.2.1
-seaborn==0.9.0
-SQLAlchemy==1.3.0
-tornado==5.1.1
-urllib3==1.24
-virtualenv==16.1.0
-virtualenv-clone==0.4.0
-virtualenvwrapper==4.8.2
-wcwidth==0.1.7
-Werkzeug==0.14.1
-WTForms==2.2.1
+dash-core-components==0.46.0
+dash==0.41.0
+flask-sqlalchemy==2.3.2
+pandas==0.24.2
+pymysql==0.9.3
